[project]
name = "langgraph-studio"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain-anthropic>=0.3.14",
    "langchain-community>=0.3.24",
    "langchain-core>=0.3.63",
    "langchain-openai>=0.3.18",
    "langchain-tavily>=0.2.0",
    "langgraph>=0.4.7",
    "langgraph-cli[inmem]>=0.2.10",
    "python-dotenv>=1.1.0",
]
